--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <style>
       
     </style>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/dark/main.css">
+    <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/dark/main.css">
     <link rel="stylesheet" href="app/popup.css">
-    <link rel="stylesheet" type="text/css" href="app/assets/GP.css">
+    <link rel="stylesheet" type="text/css" href="app/assets/webFonts/fonts.css">
     <script>
       var locationPath = location.pathname.replace(/\/[^/]*$/, "");
       window.dojoConfig = {
@@ -20,7 +20,7 @@
         ]
       };
     </script>
-    <script src="https://js.arcgis.com/4.23"></script>
+    <script src="https://js.arcgis.com/4.24"></script>
   </head>
   <body>
     <div id="viewDiv"></div>
