--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <div id="viewDiv"></div>
+    <div id="warning"></div>
     <script>require(["app/main"])</script>
   </body>
 </html>
