--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       };
     </script>
     <script src="https://js.arcgis.com/4.25"></script>
+    <script type="module" src="https://js.arcgis.com/calcite-components/1.0.3/calcite.esm.js"></script>
   </head>
   <body>
     <div id="viewDiv"></div>
     <div id="warning"></div>
+    <div id="filterNode"></div>
     <script>require(["app/main"])</script>
   </body>
 </html>
